--- a/experiencia.html
+++ b/experiencia.html
@@ -31,10 +31,10 @@
       margin-bottom: 12px;
       font-size: 22px;
     }
-    p {
-      line-height: 1.6;
+    p.description {
       margin-top: 0;
       margin-bottom: 12px;
+      line-height: 1.6;
     }
     .doc-card {
       border: 1px solid #ddd;
@@ -57,14 +57,14 @@
     .doc-card a:hover {
       text-decoration: underline;
     }
-    .section-link {
-      margin-top: 12px;
-      display: inline-block;
+    .back-link {
+      margin-top: 40px;
+      display: block;
+      text-decoration: none;
       color: #1f6feb;
       font-weight: bold;
-      text-decoration: none;
     }
-    .section-link:hover {
+    .back-link:hover {
       text-decoration: underline;
     }
   </style>
@@ -76,33 +76,42 @@
 
     <h2>Experiencia</h2>
 
-    <!-- PASANTÍA / EPI -->
-    <h3>Pasantía en Investigación</h3>
-    <p>Participación en procesos de investigación académica, incluyendo análisis de datos y elaboración de informes técnicos.</p>
-    <div class="doc-card">
-      <h4>Certificado EPI – Pasantía en Investigación</h4>
-      <a href="soportes/experiencia/pasantia-investigacion.pdf" target="_blank">Ver documento</a>
+    <!-- CERTIFICACIONES LABORALES -->
+    <div class="experience-block">
+      <h3>Certificación Laboral como Auxiliar Administrativo</h3>
+      <p class="description">
+        Documento emitido por la Representante Legal de la Asociación de Hogares Comunitarios Porfía Uno que avala que Daniel Steven Betancur Calderón trabajó en dicha entidad desde el 1 de marzo de 2025 hasta el 12 de diciembre de 2025.
+      </p>
+      <div class="doc-card">
+        <h4>CERTIFICA (Asociación Porfía Uno)</h4>
+        <a href="soportes/experiencia/certifica-porfia1.pdf" target="_blank">Ver documento</a>
+      </div>
     </div>
 
-    <!-- PORFÍA 1 -->
-    <h3>Apoyo Técnico Administrativo</h3>
-    <p>Gestión administrativa y soporte en procesos operativos de la Asociación de HCB Porfía 1.</p>
-    <div class="doc-card">
-      <h4>Certificado Laboral – Asociación de HCB Porfía 1</h4>
-      <a href="soportes/experiencia/apoyo-tecnico-porfia-1.pdf" target="_blank">Ver documento</a>
+    <div class="experience-block">
+      <h3>Certificación Laboral como Apoyo Técnico Administrativo</h3>
+      <p class="description">
+        Constancia laboral que certifica el desempeño de Daniel Steven Betancur Calderón en la Asociación Porfía 3 durante el periodo comprendido entre el 1 de febrero de 2023 y el 15 de diciembre de 2023.
+      </p>
+      <div class="doc-card">
+        <h4>CERTIFICA (Asociación Porfía 3)</h4>
+        <a href="soportes/experiencia/certifica-porfia3.pdf" target="_blank">Ver documento</a>
+      </div>
     </div>
 
-    <!-- PORFÍA 3 -->
-    <h3>Apoyo Técnico Administrativo</h3>
-    <p>Asistencia en la gestión documental y administrativa, fortaleciendo la eficiencia de procesos institucionales en Porfía 3.</p>
-    <div class="doc-card">
-      <h4>Certificado Laboral – Asociación de HCB Porfía 3</h4>
-      <a href="soportes/experiencia/apoyo-tecnico-porfia-3.pdf" target="_blank">Ver documento</a>
+    <!-- EXPERIENCIA EN INVESTIGACIÓN -->
+    <div class="experience-block">
+      <h3>Certificado de Pasantía en Investigación y Semillero</h3>
+      <p class="description">
+        Documento firmado por el líder del grupo de investigación "Territorio y Ambiente" de la Universidad de los Llanos. Certifica que el estudiante pertenece al semillero "Territorio y Sociedad" desde enero de 2025 y que realiza su propuesta de grado como Estudiante Pasante en Investigación (EPI).
+      </p>
+      <div class="doc-card">
+        <h4>Constancia (Territorio y Ambiente)</h4>
+        <a href="soportes/experiencia/constancia-territorio.pdf" target="_blank">Ver documento</a>
+      </div>
     </div>
 
-    <p style="margin-top:40px;">
-      <a href="index.html" style="color:#1f6feb; text-decoration:none;">← Volver a la página principal</a>
-    </p>
+    <a class="back-link" href="index.html">← Volver a la página principal</a>
 
   </div>
 
