--- a/educacion.html
+++ b/educacion.html
@@ -31,30 +31,30 @@
       margin-bottom: 12px;
       font-size: 22px;
     }
-    p.description {
+    p {
+      line-height: 1.6;
       margin-top: 0;
       margin-bottom: 12px;
-      line-height: 1.6;
     }
-    .doc-card {
+    .edu-card {
       border: 1px solid #ddd;
       border-radius: 10px;
       background-color: #f9f9f9;
       padding: 18px 20px;
-      max-width: 480px;
+      max-width: 600px;
       margin-bottom: 24px;
     }
-    .doc-card h4 {
+    .edu-card h4 {
       margin: 0 0 8px 0;
       color: #1f6feb;
       font-size: 18px;
     }
-    .doc-card a {
+    .edu-card a {
       text-decoration: none;
       color: #1f6feb;
       font-weight: bold;
     }
-    .doc-card a:hover {
+    .edu-card a:hover {
       text-decoration: underline;
     }
     .back-link {
@@ -77,37 +77,26 @@
     <h2>Educación</h2>
 
     <!-- UNIVERSIDAD -->
-    <div class="education-block">
-      <h3>Economía – Universidad de los Llanos</h3>
-      <p class="description">Estudiante de último semestre, con enfoque en economía ambiental y sostenibilidad.</p>
-      <div class="doc-card">
-        <h4>Certificado Académico</h4>
-        <a href="soportes/educacion/certificado-universidad.pdf" target="_blank">Ver documento</a>
-      </div>
+    <div class="edu-card">
+      <h3>Universidad de los Llanos</h3>
+      <p>Carrera de Economía. Formación orientada al análisis económico, políticas públicas y sostenibilidad. Último semestre cursado.</p>
     </div>
 
-    <!-- SEMILLERO DE INVESTIGACIÓN -->
-    <div class="education-block">
-      <h3>Semillero de Investigación</h3>
-      <p class="description">Participación activa en proyectos de investigación en economía y sostenibilidad.</p>
-      <div class="doc-card">
-        <h4>Certificado de Participación</h4>
-        <a href="soportes/educacion/certificado-semillero.pdf" target="_blank">Ver documento</a>
-      </div>
+    <!-- SEMILLEROS / CURSOS -->
+    <div class="edu-card">
+      <h3>Semillero de Investigación "Territorio y Sociedad"</h3>
+      <p>Participación activa desde enero de 2025 en proyectos de investigación relacionados con desarrollo territorial, economía ambiental y políticas de sostenibilidad.</p>
     </div>
 
-    <!-- CURSOS COMPLEMENTARIOS -->
-    <div class="education-block">
-      <h3>Cursos Complementarios</h3>
-      <p class="description">Formación adicional en análisis de datos, economía ambiental y sostenibilidad.</p>
-      <div class="doc-card">
-        <h4>Certificado Curso Excel Avanzado</h4>
-        <a href="soportes/educacion/certificado-excel.pdf" target="_blank">Ver documento</a>
-      </div>
-      <div class="doc-card">
-        <h4>Certificado Curso Econometría Básica</h4>
-        <a href="soportes/educacion/certificado-econometria.pdf" target="_blank">Ver documento</a>
-      </div>
+    <div class="edu-card">
+      <h3>Curso de Economía Ambiental</h3>
+      <p>Formación complementaria sobre análisis económico aplicado a la sostenibilidad ambiental, manejo de indicadores y políticas de conservación.</p>
+    </div>
+
+    <!-- CERTIFICACIONES -->
+    <div class="edu-card">
+      <h3>Certificaciones Académicas</h3>
+      <p>Distintas certificaciones obtenidas por cursos cortos y talleres especializados en investigación económica, análisis de datos y gestión ambiental.</p>
     </div>
 
     <a class="back-link" href="index.html">← Volver a la página principal</a>
