--- a/educacion.html
+++ b/educacion.html
@@ -41,7 +41,7 @@
       border-radius: 10px;
       background-color: #f9f9f9;
       padding: 18px 20px;
-      max-width: 600px;
+      max-width: 700px;
       margin-bottom: 24px;
     }
     .edu-card h4 {
@@ -71,37 +71,39 @@
 </head>
 
 <body>
-
   <div class="container">
 
     <h2>Educación</h2>
 
-    <!-- UNIVERSIDAD -->
+    <!-- Universidad -->
     <div class="edu-card">
       <h3>Universidad de los Llanos</h3>
       <p>Carrera de Economía. Formación orientada al análisis económico, políticas públicas y sostenibilidad. Último semestre cursado.</p>
+      <a href="documentos/universidad.pdf" target="_blank">Ver documento</a>
     </div>
 
-    <!-- SEMILLEROS / CURSOS -->
+    <!-- Semillero / Investigación -->
     <div class="edu-card">
-      <h3>Semillero de Investigación "Territorio y Sociedad"</h3>
-      <p>Participación activa desde enero de 2025 en proyectos de investigación relacionados con desarrollo territorial, economía ambiental y políticas de sostenibilidad.</p>
+      <h3>Certificado de Pasantía en Investigación y Semillero</h3>
+      <p>Documento firmado por el líder del grupo de investigación "Territorio y Ambiente" de la Universidad de los Llanos. Certifica que el estudiante pertenece al semillero "Territorio y Sociedad" desde enero de 2025 y realiza su propuesta de grado como Estudiante Pasante en Investigación (EPI).</p>
+      <a href="documentos/semillero.pdf" target="_blank">Ver documento</a>
     </div>
 
+    <!-- Cursos / Certificaciones -->
     <div class="edu-card">
       <h3>Curso de Economía Ambiental</h3>
       <p>Formación complementaria sobre análisis económico aplicado a la sostenibilidad ambiental, manejo de indicadores y políticas de conservación.</p>
+      <a href="documentos/curso_economia_ambiental.pdf" target="_blank">Ver documento</a>
     </div>
 
-    <!-- CERTIFICACIONES -->
     <div class="edu-card">
       <h3>Certificaciones Académicas</h3>
       <p>Distintas certificaciones obtenidas por cursos cortos y talleres especializados en investigación económica, análisis de datos y gestión ambiental.</p>
+      <a href="documentos/certificaciones.pdf" target="_blank">Ver documento</a>
     </div>
 
     <a class="back-link" href="index.html">← Volver a la página principal</a>
 
   </div>
-
 </body>
 </html>
