--- a/educacion.html
+++ b/educacion.html
@@ -1,109 +1,27 @@
-<html lang="es">
-<head>
-  <meta charset="UTF-8">
-  <title>Educación | DSBC</title>
-  <style>
-    body {
-      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #f6f8fa;
-      color: #24292f;
-      margin: 0;
-      padding: 0;
-    }
-    .container {
-      max-width: 950px;
-      margin: 60px auto;
-      background-color: #fff;
-      border-radius: 14px;
-      padding: 50px 60px;
-      box-shadow: 0 10px 30px rgba(0,0,0,0.06);
-    }
-    h2 {
-      color: #1f6feb;
-      font-size: 28px;
-      border-bottom: 2px solid #1f6feb;
-      padding-bottom: 8px;
-      margin-bottom: 40px;
-    }
-    h3 {
-      color: #1f6feb;
-      margin-top: 32px;
-      margin-bottom: 12px;
-      font-size: 22px;
-    }
-    p {
-      line-height: 1.6;
-      margin-top: 0;
-      margin-bottom: 12px;
-    }
-    .edu-card {
-      border: 1px solid #ddd;
-      border-radius: 10px;
-      background-color: #f9f9f9;
-      padding: 18px 20px;
-      max-width: 700px;
-      margin-bottom: 24px;
-    }
-    .edu-card h4 {
-      margin: 0 0 8px 0;
-      color: #1f6feb;
-      font-size: 18px;
-    }
-    .edu-card a {
-      text-decoration: none;
-      color: #1f6feb;
-      font-weight: bold;
-    }
-    .edu-card a:hover {
-      text-decoration: underline;
-    }
-    .back-link {
-      margin-top: 40px;
-      display: block;
-      text-decoration: none;
-      color: #1f6feb;
-      font-weight: bold;
-    }
-    .back-link:hover {
-      text-decoration: underline;
-    }
-  </style>
-</head>
+<!-- EDUCACIÓN -->
+<h2>Educación | DSBC</h2>
 
-<body>
-  <div class="container">
+<div class="doc-card">
+  <h4>Acta Académica</h4>
+  <a href="documentos/acta-academica.pdf" target="_blank">Ver documento</a>
+</div>
 
-    <h2>Educación</h2>
+<div class="doc-card">
+  <h4>Certificado de Créditos</h4>
+  <a href="documentos/certificado-creditos.pdf" target="_blank">Ver documento</a>
+</div>
 
-    <!-- Universidad -->
-    <div class="edu-card">
-      <h3>Universidad de los Llanos</h3>
-      <p>Carrera de Economía. Formación orientada al análisis económico, políticas públicas y sostenibilidad. Último semestre cursado.</p>
-      <a href="documentos/universidad.pdf" target="_blank">Ver documento</a>
-    </div>
+<div class="doc-card">
+  <h4>Certificado Final</h4>
+  <a href="documentos/certificado-final.pdf" target="_blank">Ver documento</a>
+</div>
 
-    <!-- Semillero / Investigación -->
-    <div class="edu-card">
-      <h3>Certificado de Pasantía en Investigación y Semillero</h3>
-      <p>Documento firmado por el líder del grupo de investigación "Territorio y Ambiente" de la Universidad de los Llanos. Certifica que el estudiante pertenece al semillero "Territorio y Sociedad" desde enero de 2025 y realiza su propuesta de grado como Estudiante Pasante en Investigación (EPI).</p>
-      <a href="documentos/semillero.pdf" target="_blank">Ver documento</a>
-    </div>
+<div class="doc-card">
+  <h4>Documento Oficial TCOCF</h4>
+  <a href="documentos/documento-oficial-tcocf.pdf" target="_blank">Ver documento</a>
+</div>
 
-    <!-- Cursos / Certificaciones -->
-    <div class="edu-card">
-      <h3>Curso de Economía Ambiental</h3>
-      <p>Formación complementaria sobre análisis económico aplicado a la sostenibilidad ambiental, manejo de indicadores y políticas de conservación.</p>
-      <a href="documentos/curso_economia_ambiental.pdf" target="_blank">Ver documento</a>
-    </div>
-
-    <div class="edu-card">
-      <h3>Certificaciones Académicas</h3>
-      <p>Distintas certificaciones obtenidas por cursos cortos y talleres especializados en investigación económica, análisis de datos y gestión ambiental.</p>
-      <a href="documentos/certificaciones.pdf" target="_blank">Ver documento</a>
-    </div>
-
-    <a class="back-link" href="index.html">← Volver a la página principal</a>
-
-  </div>
-</body>
-</html>
+<div class="doc-card">
+  <h4>ESG y Estrategias de Sostenibilidad</h4>
+  <a href="documentos/esg-estrategias-sostenibilidad.pdf" target="_blank">Ver documento</a>
+</div>
