--- a/educacion.html
+++ b/educacion.html
@@ -1,96 +1,262 @@
-<!-- EDUCACIÓN -->
-<section id="educacion">
-  <h2 class="section-title">Educación</h2>
-  <div class="docs-container">
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <title>EDUC | DSBC</title>
+  <title>Educación | DSBC</title>
+  <style>
+    body {
+      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #f6f8fa;
+      color: #24292f;
+      margin: 0;
+      padding: 0;
+    }
+    .container {
+      max-width: 960px;
+      margin: 60px auto;
+      background-color: #fff;
+      border-radius: 14px;
+      padding: 50px 60px;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.06);
+    }
+    h2 {
+      color: #1f6feb;
+      margin-bottom: 30px;
+      font-size: 28px;
+      border-bottom: 2px solid #1f6feb;
+      padding-bottom: 8px;
+    }
+    .card {
+      border: 1px solid #ddd;
+      border-radius: 12px;
+      padding: 20px;
+      margin-bottom: 20px;
+      background-color: #f9f9f9;
+      box-shadow: 0 6px 18px rgba(0,0,0,0.08);
+      transition: transform 0.2s, box-shadow 0.2s;
+    }
+    .card:hover {
+      transform: translateY(-3px);
+      box-shadow: 0 10px 25px rgba(0,0,0,0.12);
+    }
+    .card h3 {
+      margin: 0 0 8px 0;
+      color: #1f6feb;
+      font-size: 20px;
+    }
+    .card p {
+      margin: 0 0 10px 0;
+      line-height: 1.6;
+    }
+    .card a {
+      display: inline-block;
+      text-decoration: none;
+      background-color: #1f6feb;
+      color: #fff;
+      padding: 8px 14px;
+      border-radius: 6px;
+      font-weight: bold;
+      transition: background-color 0.3s;
+    }
+    .card a:hover {
+      background-color: #155bb5;
+    }
+    .back-link {
+      display: inline-block;
+      margin-top: 40px;
+      color: #1f6feb;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    .back-link:hover {
+      text-decoration: underline;
+    }
+  </style>
+</head>
 
-    <div class="doc-card">
+<body>
+
+<div style="background-color:#f6f8fa; padding:60px 20px;">
+  <div style="
+    max-width:900px;
+    margin:auto;
+    background:white;
+    border-radius:14px;
+    padding:50px 60px;
+    box-shadow:0 10px 30px rgba(0,0,0,0.06);
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', serif;
+    color:#24292f;
+  ">
+
+  <div class="container">
+    <h2>Educación</h2>
+    <p style="margin-bottom:24px;">Documentos académicos y certificaciones oficiales obtenidas durante mi formación.</p>
+
+    <!-- CERTIFICADO DE CRÉDITOS -->
+    <div style="
+      border:1px solid #ddd; border-radius:12px; padding:20px; background:#fff; 
+      box-shadow:0 6px 18px rgba(0,0,0,0.08); margin-bottom:20px;
+      display:flex; justify-content:space-between; align-items:center;">
+      <div>
+        <h3 style="margin:0 0 6px 0; color:#1f6feb;">Certificado de Créditos Académicos</h3>
+        <p style="margin:0; color:#24292f; line-height:1.5;">
+          Documento que acredita los créditos cursados y aprobados dentro del programa académico.
+        </p>
+      </div>
+      <div>
+        <a href="soportes/educacion/certificado-creditos.pdf" target="_blank" style="
+          background:#1f6feb; color:white; text-decoration:none;
+          padding:8px 14px; border-radius:6px; font-weight:bold;
+          transition:0.3s;"
+          onmouseover="this.style.background='#155bb5'" onmouseout="this.style.background='#1f6feb'">
+          Ver PDF
+        </a>
+      </div>
+    <div class="card">
+      <h3>Certificado de Créditos Académicos</h3>
+      <p>Documento que acredita los créditos cursados y aprobados dentro del programa académico.</p>
+      <a href="soportes/educacion/certificado-creditos.pdf" target="_blank">Ver documento</a>
+    </div>
+
+    <!-- ESG -->
+    <div style="
+      border:1px solid #ddd; border-radius:12px; padding:20px; background:#fff; 
+      box-shadow:0 6px 18px rgba(0,0,0,0.08); margin-bottom:20px;
+      display:flex; justify-content:space-between; align-items:center;">
+      <div>
+        <h3 style="margin:0 0 6px 0; color:#1f6feb;">ESG – Estrategias de Sostenibilidad</h3>
+        <p style="margin:0; color:#24292f; line-height:1.5;">
+          Certificado de formación en estrategias de sostenibilidad, enfoque ESG y gestión responsable.
+        </p>
+      </div>
+      <div>
+        <a href="soportes/educacion/esg-estrategias-sostenibilidad.pdf" target="_blank" style="
+          background:#1f6feb; color:white; text-decoration:none;
+          padding:8px 14px; border-radius:6px; font-weight:bold;
+          transition:0.3s;"
+          onmouseover="this.style.background='#155bb5'" onmouseout="this.style.background='#1f6feb'">
+          Ver PDF
+        </a>
+      </div>
+    <div class="card">
+      <h3>ESG – Estrategias de Sostenibilidad</h3>
+      <p>Certificado de formación en estrategias de sostenibilidad, enfoque ESG y gestión responsable.</p>
+      <a href="soportes/educacion/esg-estrategias-sostenibilidad.pdf" target="_blank">Ver documento</a>
+    </div>
+
+    <!-- ECONOMETRÍA -->
+    <div style="
+      border:1px solid #ddd; border-radius:12px; padding:20px; background:#fff; 
+      box-shadow:0 6px 18px rgba(0,0,0,0.08); margin-bottom:20px;
+      display:flex; justify-content:space-between; align-items:center;">
+      <div>
+        <h3 style="margin:0 0 6px 0; color:#1f6feb;">Introducción a la Econometría</h3>
+        <p style="margin:0; color:#24292f; line-height:1.5;">
+          Certificado académico en fundamentos de econometría, análisis estadístico y modelos básicos.
+        </p>
+      </div>
+      <div>
+        <a href="soportes/educacion/introduccion-econometria.pdf" target="_blank" style="
+          background:#1f6feb; color:white; text-decoration:none;
+          padding:8px 14px; border-radius:6px; font-weight:bold;
+          transition:0.3s;"
+          onmouseover="this.style.background='#155bb5'" onmouseout="this.style.background='#1f6feb'">
+          Ver PDF
+        </a>
+      </div>
+    <div class="card">
+      <h3>Introducción a la Econometría</h3>
+      <p>Certificado académico en fundamentos de econometría, análisis estadístico y modelos básicos.</p>
+      <a href="soportes/educacion/introduccion-econometria.pdf" target="_blank">Ver documento</a>
+    </div>
+
+    <!-- ACTA -->
+    <div style="
+      border:1px solid #ddd; border-radius:12px; padding:20px; background:#fff; 
+      box-shadow:0 6px 18px rgba(0,0,0,0.08); margin-bottom:20px;
+      display:flex; justify-content:space-between; align-items:center;">
+      <div>
+        <h3 style="margin:0 0 6px 0; color:#1f6feb;">Acta Académica</h3>
+        <p style="margin:0; color:#24292f; line-height:1.5;">
+          Acta de Grado expedida por el SENA que certifica la culminación y aprobación del proceso formativo.
+        </p>
+      </div>
+      <div>
+        <a href="soportes/educacion/acta-academica.pdf" target="_blank" style="
+          background:#1f6feb; color:white; text-decoration:none;
+          padding:8px 14px; border-radius:6px; font-weight:bold;
+          transition:0.3s;"
+          onmouseover="this.style.background='#155bb5'" onmouseout="this.style.background='#1f6feb'">
+          Ver PDF
+        </a>
+      </div>
+    <div class="card">
       <h3>Acta Académica</h3>
-      <p>Documento oficial que certifica la finalización de los estudios académicos correspondientes.</p>
-      <a href="documentos/acta-academica.pdf" target="_blank" class="doc-link">Ver documento</a>
+      <p>Acta de Grado expedida por el SENA que certifica la culminación y aprobación del proceso formativo.</p>
+      <a href="soportes/educacion/acta-academica.pdf" target="_blank">Ver documento</a>
     </div>
 
-    <div class="doc-card">
-      <h3>Certificado de Créditos</h3>
-      <p>Certificación de los créditos académicos obtenidos durante la carrera universitaria.</p>
-      <a href="documentos/certificado-creditos.pdf" target="_blank" class="doc-link">Ver documento</a>
-    </div>
-
-    <div class="doc-card">
-      <h3>Certificado Final</h3>
-      <p>Constancia oficial de la culminación de los estudios y requisitos académicos finales.</p>
-      <a href="documentos/certificado-final.pdf" target="_blank" class="doc-link">Ver documento</a>
-    </div>
-
-    <div class="doc-card">
+    <!-- DOCUMENTO OFICIAL TCOCF -->
+    <div style="
+      border:1px solid #ddd; border-radius:12px; padding:20px; background:#fff; 
+      box-shadow:0 6px 18px rgba(0,0,0,0.08); margin-bottom:20px;
+      display:flex; justify-content:space-between; align-items:center;">
+      <div>
+        <h3 style="margin:0 0 6px 0; color:#1f6feb;">Documento Oficial TCOCF</h3>
+        <p style="margin:0; color:#24292f; line-height:1.5;">
+          Documento oficial que certifica la formación y acreditación en el programa Técnico en Contabilización de Operaciones Comerciales y Financieras.
+        </p>
+      </div>
+      <div>
+        <a href="soportes/educacion/documento-oficial-tcocf.pdf" target="_blank" style="
+          background:#1f6feb; color:white; text-decoration:none;
+          padding:8px 14px; border-radius:6px; font-weight:bold;
+          transition:0.3s;"
+          onmouseover="this.style.background='#155bb5'" onmouseout="this.style.background='#1f6feb'">
+          Ver PDF
+        </a>
+      </div>
+    <div class="card">
       <h3>Documento Oficial TCOCF</h3>
-      <p>Documento emitido por la institución que avala formalmente los estudios cursados.</p>
-      <a href="documentos/documento-oficial-tcocf.pdf" target="_blank" class="doc-link">Ver documento</a>
+      <p>Documento oficial que certifica la formación y acreditación en el programa Técnico en Contabilización de Operaciones Comerciales y Financieras.</p>
+      <a href="soportes/educacion/documento-oficial-tcocf.pdf" target="_blank">Ver documento</a>
     </div>
 
-    <div class="doc-card">
-      <h3>ESG y Estrategias de Sostenibilidad</h3>
-      <p>Documento que detalla la formación en estrategias de sostenibilidad y criterios ESG aplicados.</p>
-      <a href="documentos/esg-estrategias-sostenibilidad.pdf" target="_blank" class="doc-link">Ver documento</a>
+    <!-- CERTIFICADO FINAL -->
+    <div style="
+      border:1px solid #ddd; border-radius:12px; padding:20px; background:#fff; 
+      box-shadow:0 6px 18px rgba(0,0,0,0.08); margin-bottom:20px;
+      display:flex; justify-content:space-between; align-items:center;">
+      <div>
+        <h3 style="margin:0 0 6px 0; color:#1f6feb;">Certificado Final</h3>
+        <p style="margin:0; color:#24292f; line-height:1.5;">
+          Documento oficial que detalla las calificaciones obtenidas y la intensidad horaria total del curso.
+        </p>
+      </div>
+      <div>
+        <a href="soportes/educacion/certificado-final.pdf" target="_blank" style="
+          background:#1f6feb; color:white; text-decoration:none;
+          padding:8px 14px; border-radius:6px; font-weight:bold;
+          transition:0.3s;"
+          onmouseover="this.style.background='#155bb5'" onmouseout="this.style.background='#1f6feb'">
+          Ver PDF
+        </a>
+      </div>
+    <div class="card">
+      <h3>Certificado Final</h3>
+      <p>Documento oficial que detalla las calificaciones obtenidas y la intensidad horaria total del curso.</p>
+      <a href="soportes/educacion/certificado-final.pdf" target="_blank">Ver documento</a>
     </div>
+
+    <p style="margin-top:40px;">
+      <a href="index.html" style="color:#1f6feb; text-decoration:none;">
+        ← Volver a la página principal
+      </a>
+    </p>
+    <a class="back-link" href="index.html">← Volver a la página principal</a>
 
   </div>
-</section>
+</div>
 
-<style>
-  #educacion {
-    padding: 40px 20px;
-    background-color: #f9f9f9;
-  }
-
-  .section-title {
-    text-align: center;
-    font-size: 2rem;
-    margin-bottom: 30px;
-    color: #222;
-  }
-
-  .docs-container {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-    gap: 20px;
-  }
-
-  .doc-card {
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 12px;
-    box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-    transition: transform 0.2s, box-shadow 0.2s;
-  }
-
-  .doc-card:hover {
-    transform: translateY(-5px);
-    box-shadow: 0 6px 16px rgba(0,0,0,0.15);
-  }
-
-  .doc-card h3 {
-    font-size: 1.2rem;
-    margin-bottom: 10px;
-    color: #333;
-  }
-
-  .doc-card p {
-    font-size: 0.95rem;
-    margin-bottom: 15px;
-    color: #555;
-  }
-
-  .doc-link {
-    display: inline-block;
-    text-decoration: none;
-    background-color: #0072ce;
-    color: #fff;
-    padding: 8px 16px;
-    border-radius: 8px;
-    transition: background-color 0.2s;
-  }
-
-  .doc-link:hover {
-    background-color: #005bb5;
-  }
-</style>
+</body>
+</html>
